--- a/package.json
+++ b/package.json
@@ -23,5 +23,14 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "vite": "^7.0.4"
-  }
+  },
+  "scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview",
+  "deploy": "gh-pages -d dist"
+},
+"homepage": "https://nage-pula.github.io/React_Movie"
+
+
 }
